--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
     "lodash": "^4.17.21",
+    "mapbox-gl": "1.8.1",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.6.2",
     "strip-whitespace-loader": "github:kochizufan/strip-whitespace-loader#fix_dq_npm",
@@ -104,6 +105,7 @@
   "overrides": {
     "@babel/traverse": "7.23.2",
     "glob-parent": "5.1.2",
-    "axios": "1.6.0"
+    "axios": "1.6.0",
+    "minimist": "1.2.8"
   }
 }
