--- a/pwa/sample_manifest.json
+++ b/pwa/sample_manifest.json
@@ -1,28 +1,23 @@
 {
-  "name": "Maplat PWA Sample",
-  "short_name": "Maplat PWA",
-  "background_color": "#780508",
-  "icons": [{
-    "src": "./sample_icon-96.png",
-    "sizes": "96x96",
-    "type": "image/png"
-  },{
-    "src": "./sample_icon-144.png",
-    "sizes": "144x144",
-    "type": "image/png"
-  },{
-    "src": "./sample_icon-192.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  },{
-    "src": "./sample_icon-256.png",
-    "sizes": "256x256",
-    "type": "image/png"
-  },{
-    "src": "./sample_icon-512.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }],
-  "start_url": "../debug.html?overlay=true",
-  "display": "standalone"
+  "name": "ぷらっと館林",
+  "short_name": "ぷら館林",
+  "background_color": "#f6f0d3",
+  "icons": [
+    {
+      "src": "sample/manifest-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "sample/manifest-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable any"
+    }
+  ],
+  "start_url": "https://s.maplat.jp/r/tatebayashimap/",
+  "scope": "/r/tatebayashimap/",
+  "display": "standalone",
+  "theme_color": "#f6f0d3"
 }
