--- a/pwa/narajizo_manifest.json
+++ b/pwa/narajizo_manifest.json
@@ -16,7 +16,7 @@
       "purpose": "maskable any"
     }
   ],
-  "start_url": "https://s.maplat.jp/r/narajizomap/",
+  "start_url": "https://t.maplat.jp/r/narajizomap/",
   "scope": "/r/narajizomap/",
   "display": "standalone",
   "theme_color": "#780508"
