--- a/pwa/mito_manifest.json
+++ b/pwa/mito_manifest.json
@@ -16,7 +16,7 @@
       "purpose": "maskable any"
     }
   ],
-  "start_url": "https://s.maplat.jp/r/mitomap/",
+  "start_url": "https://t.maplat.jp/r/mitomap/",
   "scope": "/r/mitomap/",
   "display": "standalone",
   "theme_color": "#f6f0d3"
