--- a/pwa/tatsuno_manifest.json
+++ b/pwa/tatsuno_manifest.json
@@ -16,7 +16,7 @@
       "purpose": "maskable any"
     }
   ],
-  "start_url": "https://s.maplat.jp/r/tatsunomap/",
+  "start_url": "https://t.maplat.jp/r/tatsunomap/",
   "scope": "/r/tatsunomap/",
   "display": "standalone",
   "theme_color": "#780508"
