--- a/pwa/templates/manifest_template.json
+++ b/pwa/templates/manifest_template.json
@@ -3,7 +3,7 @@
   "short_name": "Maplat",
   "background_color": "#f6f0d3",
   "icons": [],
-  "start_url": "https://s.maplat.jp/r/tatebayashimap/?pwa",
+  "start_url": "https://t.maplat.jp/r/tatebayashimap/?pwa",
   "scope":"/r/tatebayashimap/",
   "display": "standalone"
 }
