--- a/pwa/18mapcon_gp_manifest.json
+++ b/pwa/18mapcon_gp_manifest.json
@@ -16,7 +16,7 @@
       "purpose": "maskable any"
     }
   ],
-  "start_url": "https://t.maplat.jp/r/18mapcon_gpmap/",
+  "start_url": "https://s.maplat.jp/r/18mapcon_gpmap/",
   "scope": "/r/18mapcon_gpmap/",
   "display": "standalone",
   "theme_color": "#a61e32"
