--- a/pwa/r_kinugasa_manifest.json
+++ b/pwa/r_kinugasa_manifest.json
@@ -16,7 +16,7 @@
       "purpose": "maskable any"
     }
   ],
-  "start_url": "https://t.maplat.jp/r/r_kinugasamap/",
+  "start_url": "https://s.maplat.jp/r/r_kinugasamap/",
   "scope": "/r/r_kinugasamap/",
   "display": "standalone",
   "theme_color": "#a61e32"
