src/ 以下の全ファイルを TypeScript (.ts) に変換しました。 @maplat/core v0.11.0 への対応を完了し、APIの不整合を解消しました。 GPS関連ロジックを整理し、alwaysGpsOn オプションのサポートを実装しました。 不要な freeze 関連スクリプトを削除しました。 最終的に tsc による型チェックがエラーなしで通ることを確認しました。

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@maplat/ui",
   "version": "0.10.6",
   "description": "Maplat is the cool Historical Map/Illustrated Map Viewer.\nIt can transform each map coordinates with nonlinear but homeomorphic projection and makes possible that the maps can collaborate with GPS/accurate maps, without distorting original maps.",
-  "main": "src/index.js",
-  "module": "src/index.js",
+  "main": "dist/maplat-ui.umd.js",
+  "module": "dist/maplat-ui.es.js",
+  "types": "src/index.ts",
   "files": [
     "src/",
     "dist/",
@@ -14,20 +15,15 @@
     "locales/"
   ],
   "scripts": {
-    "server": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack-cli serve --config ./webpack_config/webpack.config.standard.dev.js --host=127.0.0.1 --mode=development",
-    "server:packed": "cross-env NODE_OPTIONS=--openssl-legacy-provider npm run freeze && cross-env NODE_OPTIONS=--openssl-legacy-provider webpack-cli serve --config ./webpack_config/webpack.config.packed.dev.js --host=127.0.0.1 --mode=development",
-    "build": "npm run build:standard && npm run build:packed",
-    "build:standard": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack --color --progress --config ./webpack_config/webpack.config.standard.js",
-    "build:packed": "cross-env NODE_OPTIONS=--openssl-legacy-provider npm run freeze && cross-env NODE_OPTIONS=--openssl-legacy-provider webpack --config ./webpack_config/webpack.config.packed.js",
-    "zip": "gulp zip",
-    "test": "jest",
-    "preversion": "npm run lint",
-    "version": "npm run build && npm run zip && git add -A",
-    "freeze": "node bin/freezer.js",
+    "dev": "concurrently \"npm run watch:sw\" \"vite\"",
+    "build:sw": "esbuild src/service-worker.js --bundle --outfile=public/service-worker.js --define:self.__WB_MANIFEST=[]",
+    "watch:sw": "esbuild src/service-worker.js --bundle --outfile=public/service-worker.js --define:self.__WB_MANIFEST=[] --watch",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint \"{src,spec}/**/*.js\" --fix",
-    "lint:prettier": "prettier \"./{src,spec}/**/*.js\" --write",
-    "git_switch": "gulp git_switch"
+    "lint:prettier": "prettier \"./{src,spec}/**/*.js\" --write"
   },
   "repository": {
     "type": "git",
@@ -44,60 +40,36 @@
   },
   "homepage": "https://github.com/code4history/Maplat/wiki",
   "dependencies": {
-    "@maplat/core": "file:../MaplatCore",
-    "@maplat/tin": "^0.9.4",
+    "@maplat/core": "^0.11.0",
+    "@maplat/transform": "^0.3.0",
     "@turf/turf": "^6.5.0",
+    "@types/page": "^1.11.9",
+    "bootstrap.native": "^5.1.6",
+    "izitoast": "^1.4.0",
     "lodash.template": "^4.5.0",
-    "ol": "^9.0.0",
+    "page": "^1.11.6",
     "swiper": "^6.7.1",
     "tiny-emitter": "^2.1.0",
     "weiwudi": "^0.1.4"
   },
+  "peerDependencies": {
+    "mapbox-gl": "^1.13.0",
+    "maplibre-gl": "^2.0.0",
+    "ol": "^9.0.0"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "babel-jest": "^28.1.0",
-    "babel-loader": "^8.2.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "concaveman": "https://github.com/grassick/concaveman#patch-1",
-    "copy-webpack-plugin": "^6.4.1",
-    "core-js": "^3.22.7",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.2.6",
-    "css-minimizer-webpack-plugin": "^4.2.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-jest": "^26.3.0",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^10.1.0",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.3.0",
-    "gulp-zip": "^5.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^28.1.0",
-    "jest-canvas-mock": "^2.3.1",
+    "@types/node": "^20.0.0",
+    "concurrently": "^9.2.1",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jsdom": "^24.0.0",
     "less": "^4.1.2",
-    "less-loader": "^11.0.0",
-    "lodash": "^4.17.21",
-    "mapbox-gl": "1.8.1",
-    "mini-css-extract-plugin": "^2.6.0",
-    "prettier": "^2.6.2",
-    "strip-whitespace-loader": "github:kochizufan/strip-whitespace-loader#fix_dq_npm",
-    "terser-webpack-plugin": "^5.3.1",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.11.1",
-    "workbox-build": "^6.5.4",
-    "workbox-cli": "^6.5.4",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4",
-    "workbox-webpack-plugin": "^6.5.4"
+    "ol": "^10.7.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vite-plugin-pwa": "^1.2.0",
+    "vitest": "^1.0.0"
   },
   "overrides": {
     "@babel/traverse": "7.23.2",
