--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "weiwudi": "^0.1.4"
   },
   "peerDependencies": {
-    "mapbox-gl": "^1.13.0",
-    "maplibre-gl": "^2.0.0",
-    "ol": "^9.0.0"
+    "mapbox-gl": "^1.0.0 || ^2.0.0 || ^3.0.0",
+    "maplibre-gl": "^3.0.0 || ^4.0.0",
+    "ol": "^9.0.0 || ^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -68,7 +68,9 @@
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "vite-plugin-pwa": "^1.2.0",
-    "vitest": "^1.0.0"
+    "vitest": "^1.0.0",
+    "workbox-build": "^7.4.0",
+    "workbox-window": "^7.4.0"
   },
   "overrides": {
     "@babel/traverse": "7.23.2",
