Restore legacy Share Modal functionality and modernize implementation - Restore correct HTML structure for Share Modal (App/View sections). - Replace FontAwesome dependency with inline SVGs for offline compatibility and size optimization. - Centralize URL generation logic ([getShareUrl](cci:1://file:///c:/Users/kochi/github/Maplat/src/index.ts:1302:2-1308:3)) to ensure consistency between QR codes and Share buttons. - Implement custom internal Toast notification ([showToast](cci:1://file:///c:/Users/kochi/github/Maplat/src/index.ts:1310:2-1342:3) with dynamic positioning) to replace removed `iziToast` library. - Restore legacy social share parameters for Twitter (hashtags) and Facebook (popup settings). - Add `qrcode` dependency for dynamic QR code generation.

--- a/package.json
+++ b/package.json
@@ -44,10 +44,8 @@
     "@turf/turf": "^6.5.0",
     "@types/page": "^1.11.9",
     "bootstrap.native": "^5.1.6",
-    "izitoast": "^1.4.0",
-    "lodash.template": "^4.5.0",
-    "page": "^1.11.6",
-    "swiper": "^6.7.1",
+    "qrcode": "^1.5.0",
+    "swiper": "^4.5.0",
     "tiny-emitter": "^2.1.0",
     "weiwudi": "^0.1.4"
   },
@@ -58,7 +56,11 @@
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/ol": "^6.4.2",
+    "@types/qrcode": "^1.5.0",
+    "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^9.2.1",
+    "esbuild": "^0.27.1",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.0.0",
     "jsdom": "^24.0.0",
