--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "@turf/turf": "^6.5.0",
     "@types/page": "^1.11.9",
     "bootstrap.native": "^5.1.6",
+    "page": "^1.11.6",
     "qrcode": "^1.5.0",
-    "swiper": "^4.5.0",
+    "swiper": "^6.8.4",
     "tiny-emitter": "^2.1.0",
     "weiwudi": "^0.1.4"
   },
