--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "pnpm": ">=9.0.0"
   },
   "dependencies": {
-    "@c4h/weiwudi": "github:code4history/Weiwudi#aea2b72",
-    "@maplat/core": "github:code4history/MaplatCore#10e673d",
-    "@maplat/transform": "github:code4history/MaplatTransform#cec4ef4",
+    "@c4h/weiwudi": "^0.2.0",
+    "@maplat/core": "github:code4history/MaplatCore#df020e7",
+    "@maplat/transform": "^0.4.0",
     "@turf/turf": "^7.3.1",
     "@types/page": "^1.11.9",
     "bootstrap.native": "^5.1.6",
@@ -80,7 +80,6 @@
     "@types/node": "^20.19.27",
     "@types/ol": "^6.5.3",
     "@types/qrcode": "^1.5.6",
-    "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "esbuild": "^0.27.2",
@@ -93,10 +92,9 @@
     "prettier": "^3.7.4",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.1",
-    "vite": "^5.4.21",
+    "vite": "^6.4.1",
     "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-pwa": "^1.2.0",
-    "vitest": "^1.6.1",
+    "vitest": "^3.2.4",
     "workbox-build": "^7.4.0",
     "workbox-window": "^7.4.0"
   },
