--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev": "concurrently \"pnpm watch:sw\" \"vite --host\"",
     "build:sw": "esbuild src/service-worker/index.ts --bundle --outfile=dist/service-worker.js --format=iife --define:self.__WB_MANIFEST=[] && node -e \"require('fs').copyFileSync('dist/service-worker.js', 'public/service-worker.js')\"",
     "watch:sw": "esbuild src/service-worker/index.ts --bundle --outfile=public/service-worker.js --format=iife --define:self.__WB_MANIFEST=[] --watch",
-    "build": "pnpm build:sw && cross-env BUILD_MODE=package tsc && cross-env BUILD_MODE=package vite build",
+    "build": "cross-env BUILD_MODE=package tsc && cross-env BUILD_MODE=package vite build && pnpm build:sw",
     "build:demo": "pnpm build:sw && vite build",
     "preview": "vite preview",
     "test": "vitest",
@@ -31,7 +31,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
-      "less",
+      "sass",
       "workbox-build"
     ]
   },
@@ -79,6 +79,7 @@
     "@types/node": "^20.19.27",
     "@types/ol": "^6.5.3",
     "@types/qrcode": "^1.5.6",
+    "bootstrap-sass": "^3.4.3",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "esbuild": "^0.27.2",
@@ -86,7 +87,6 @@
     "eslint-config-prettier": "^9.1.2",
     "globals": "^16.5.0",
     "jsdom": "^24.1.3",
-    "less": "^4.5.1",
     "ol": "^10.7.0",
     "prettier": "^3.7.4",
     "typescript": "^5.9.3",
