--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,6 @@
   "useTabs": false,
   "trailingComma": "none",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
+  "bracketSameLine": false,
   "arrowParens": "avoid"
 }
